--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,9 @@
                     <a class="nav-link" href="/secured/attendance/">Attendance</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/secured/works/">Works</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/secured/users/">Users</a>
                 </li>
             </ul>
