--- a/views/user.ejs
+++ b/views/user.ejs
@@ -26,6 +26,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/secured/attendance/">Attendance</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/secured/works/">Works</a>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/secured/users/">Users</a>
                 </li>
