minor bug fixes

--- a/views/works.ejs
+++ b/views/works.ejs
@@ -72,6 +72,9 @@
                         <br><br>
                         <% } %>
                             <% } %>
+                                <% if(empty) { %>
+                                    <h1>No works found</h1>
+                                    <% } %>
     </div>
     <br><br>
     <script src="/javascripts/jquery.min.js"></script>
