--- a/views/works.ejs
+++ b/views/works.ejs
@@ -42,13 +42,13 @@
             <a class="btn btn-primary" href="/secured/works/Bairagondlu dam/">Bairagondlu dam</a><br><br>
             <a class="btn btn-primary" href="/secured/works/HLBC 72-214Km/">HLBC 72-214Km </a><br><br>
             <a class="btn btn-primary" href="/secured/works/Duddha and Shantigrama/">Duddha and Shantigrama</a><br><br>
-            <a class="btn btn-primary" href="/secured/works/Gowribidanur gravity canal/">Gowribidanur gravity canal</a><br><br>
+            <a class="btn btn-primary" href="/secured/works/Gowribidanur gravity work/">Gowribidanur gravity work</a><br><br>
             <a class="btn btn-primary" href="/secured/works/NRBC 0-95Km/">NRBC 0-95Km </a><br><br>
             <a class="btn btn-primary" href="/secured/works/Malaprabha ERM-1/">Malaprabha ERM-1 </a><br><br>
             <a class="btn btn-primary" href="/secured/works/Malaprabha ERM-2/">Malaprabha ERM-2 </a><br><br>
             <a class="btn btn-primary" href="/secured/works/Ghataprabha ERM-1/">Ghataprabha ERM-1 </a><br><br>
             <a class="btn btn-primary" href="/secured/works/Ghataprabha ERM-2/">Ghataprabha ERM-2 </a><br><br>
-            <a class="btn btn-primary" href="/secured/works/Yattinahole 25-55Km/">Yattinahole 25-55Km </a><br><br>
+            <a class="btn btn-primary" href="/secured/works/Yettinahole 25-55Km/">Yettinahole 25-55Km </a><br><br>
             <% } %>
                 <% if(details) { %>
                     <% for(var key in info) { %>
