--- a/views/works.ejs
+++ b/views/works.ejs
@@ -49,6 +49,8 @@
             <a class="btn btn-primary" href="/secured/works/Ghataprabha ERM-1/">Ghataprabha ERM-1 </a><br><br>
             <a class="btn btn-primary" href="/secured/works/Ghataprabha ERM-2/">Ghataprabha ERM-2 </a><br><br>
             <a class="btn btn-primary" href="/secured/works/Yettinahole 25-55Km/">Yettinahole 25-55Km </a><br><br>
+            <a class="btn btn-primary" href="/secured/works/Invoice/">Invoice</a><br><br>
+            <a class="btn btn-primary" href="/secured/works/Miscellaneous/">Miscellaneous</a><br><br>
             <% } %>
                 <% if(details) { %>
                     <% for(var key in info) { %>
