--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -20,10 +20,10 @@
 			</button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/secured/home/">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="/secured/attendance/">Attendance</a>
                 </li>
                 <li class="nav-item">
@@ -33,6 +33,12 @@
                     <a class="nav-link" href="/secured/users/">Users</a>
                 </li>
             </ul>
+            <div class="search">
+                <form method="post">
+                    <input type="text" name="search" placeholder="Search.." />
+                    <input type="submit" value="Search" />
+                </form>
+            </div>
         </div>
     </nav>
     <div class="container">
