--- a/views/works.ejs
+++ b/views/works.ejs
@@ -47,7 +47,7 @@
             <a class="btn btn-primary" href="/secured/works/HLBC 0-72Km/">HLBC 0-72Km </a><br><br>
             <a class="btn btn-primary" href="/secured/works/Bairagondlu dam/">Bairagondlu dam</a><br><br>
             <a class="btn btn-primary" href="/secured/works/HLBC 72-214Km/">HLBC 72-214Km </a><br><br>
-            <a class="btn btn-primary" href="/secured/works/Duddha and Shantigrama/">Duddha and Shantigrama</a><br><br>
+            <a class="btn btn-primary" href="/secured/works/Duddha and Shanthigrama/">Duddha and Shanthigrama</a><br><br>
             <a class="btn btn-primary" href="/secured/works/Gowribidanur gravity work/">Gowribidanur gravity work</a><br><br>
             <a class="btn btn-primary" href="/secured/works/NRBC 0-95Km/">NRBC 0-95Km </a><br><br>
             <a class="btn btn-primary" href="/secured/works/Malaprabha ERM-1/">Malaprabha ERM-1 </a><br><br>
